--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "axios": "^0.16.1",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
+    "dropzone": "^4.3.0",
     "jquery": "^3.2.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "quill": "^1.2.4",
     "vue": "^2.1.10",
+    "vue-quill-editor": "^2.1.6",
     "vue-router": "^2.4.0"
   }
 }
