--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "reactstrap": "^4.6.2",
     "sass-loader": "^6.0.6",
     "url-loader": "^0.5.9"
+  },
+  "dependencies": {
+    "bootstrap": "4.0.0-alpha.6"
   }
 }
