--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "4.0.0-alpha.6",
     "cross-env": "^3.2.3",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
@@ -25,10 +26,15 @@
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "reactstrap": "^4.6.2",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.0",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.0.0",
+    "redux-form": "^6.8.0",
+    "redux-module-builder": "^0.3.2",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
-    "url-loader": "^0.5.9"
-  },
-  "dependencies": {
-    "bootstrap": "4.0.0-alpha.6"
+    "url-loader": "^0.5.9",
   }
 }
