--- a/package.json
+++ b/package.json
@@ -9,15 +9,8 @@
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-  "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-react": "^6.24.1",
+  "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
-    "cross-env": "^3.2.3",
-    "css-loader": "^0.28.4",
-    "file-loader": "^0.11.2",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
@@ -33,8 +26,17 @@
     "redux": "^3.0.0",
     "redux-form": "^6.8.0",
     "redux-module-builder": "^0.3.2",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
+    "cross-env": "^3.2.3",
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
     "sass-loader": "^6.0.6",
-    "url-loader": "^0.5.9",
+    "url-loader": "^0.5.9"
   }
 }
