--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
-    "reactstrap": "^4.6.2",
-    "react-dom": "^15.6.1",
     "react-redux": "^5.0.0",
-    "react-router": "^4.1.1",
+    "react-router": "3.x",
     "react-router-redux": "^4.0.8",
+    "reactstrap": "^4.6.2",
     "redux": "^3.0.0",
     "redux-form": "^6.8.0",
     "redux-module-builder": "^0.3.2",
