--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^3.2.3",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
+    "font-awesome": "^4.7.0",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
