--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,15 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/0.6292ce44e61eaa47ac39.hot-update.js": "/0.6292ce44e61eaa47ac39.hot-update.js",
+    "/0.1493408f6810712ebbce.hot-update.js": "/0.1493408f6810712ebbce.hot-update.js",
+    "/0.d1cc9dd50c5be0f23c6a.hot-update.js": "/0.d1cc9dd50c5be0f23c6a.hot-update.js",
+    "/0.71b2240fe0b2e11ffd36.hot-update.js": "/0.71b2240fe0b2e11ffd36.hot-update.js",
+    "/0.bfa2f2f99dd9236c3830.hot-update.js": "/0.bfa2f2f99dd9236c3830.hot-update.js",
+    "/0.8216ef60438e720b8546.hot-update.js": "/0.8216ef60438e720b8546.hot-update.js",
+    "/0.2b648350ba659c1a8765.hot-update.js": "/0.2b648350ba659c1a8765.hot-update.js",
+    "/0.2137df29746c9aa8708d.hot-update.js": "/0.2137df29746c9aa8708d.hot-update.js",
+    "/0.751130885aa70d72931d.hot-update.js": "/0.751130885aa70d72931d.hot-update.js",
+    "/0.e73befb6493846c1f856.hot-update.js": "/0.e73befb6493846c1f856.hot-update.js",
+    "/0.e55e415e90e95f0a4a31.hot-update.js": "/0.e55e415e90e95f0a4a31.hot-update.js"
 }
