--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
-
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6"
   },
-
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -26,11 +24,11 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "sass-loader": "^6.0.6",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^3.13.3",
     "react-redux": "^5.0.0",
     "react-router": "3.x",
     "react-router-redux": "^4.0.8",
@@ -39,6 +37,7 @@
     "redux-form": "^6.8.0",
     "redux-module-builder": "^0.3.2",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
     "url-loader": "^0.5.9"
   }
 }
