Adding custom login

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,37 @@
 {
-  "/js/app.js": "/js/app.js",
-  "/css/app.css": "/css/app.css",
-  "/css/bootstrap.css": "/css/bootstrap.css"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/0.1c14868a23a1c907d5a9.hot-update.js": "/0.1c14868a23a1c907d5a9.hot-update.js",
+    "/0.23ab8093d54c3ea2aef7.hot-update.js": "/0.23ab8093d54c3ea2aef7.hot-update.js",
+    "/0.e45b0eab3ba2dba6532f.hot-update.js": "/0.e45b0eab3ba2dba6532f.hot-update.js",
+    "/0.7e40f456261fac939f99.hot-update.js": "/0.7e40f456261fac939f99.hot-update.js",
+    "/0.2e9f792e0546f52defe1.hot-update.js": "/0.2e9f792e0546f52defe1.hot-update.js",
+    "/0.75d0aa1d8827b01a8cbf.hot-update.js": "/0.75d0aa1d8827b01a8cbf.hot-update.js",
+    "/0.66bf5849979904109a34.hot-update.js": "/0.66bf5849979904109a34.hot-update.js",
+    "/0.2e28207ef267da7a81d8.hot-update.js": "/0.2e28207ef267da7a81d8.hot-update.js",
+    "/0.45399ea991fe75f35d58.hot-update.js": "/0.45399ea991fe75f35d58.hot-update.js",
+    "/0.80532cc34cd832aa57ce.hot-update.js": "/0.80532cc34cd832aa57ce.hot-update.js",
+    "/0.efa2505ed13afd6742f7.hot-update.js": "/0.efa2505ed13afd6742f7.hot-update.js",
+    "/0.8129fa6422bde03ff439.hot-update.js": "/0.8129fa6422bde03ff439.hot-update.js",
+    "/0.ad20da1c308c1e1e0c70.hot-update.js": "/0.ad20da1c308c1e1e0c70.hot-update.js",
+    "/0.33277c9e063c6009f071.hot-update.js": "/0.33277c9e063c6009f071.hot-update.js",
+    "/0.2293f942457160e4c2fd.hot-update.js": "/0.2293f942457160e4c2fd.hot-update.js",
+    "/0.d5b73522c89c9dc2390e.hot-update.js": "/0.d5b73522c89c9dc2390e.hot-update.js",
+    "/0.73b9adf4dc214912de25.hot-update.js": "/0.73b9adf4dc214912de25.hot-update.js",
+    "/0.e14219caee834450a2d0.hot-update.js": "/0.e14219caee834450a2d0.hot-update.js",
+    "/0.7874544527c9105c75cd.hot-update.js": "/0.7874544527c9105c75cd.hot-update.js",
+    "/0.c205fc93069e03d5514b.hot-update.js": "/0.c205fc93069e03d5514b.hot-update.js",
+    "/0.ddbe743ff147a6be4197.hot-update.js": "/0.ddbe743ff147a6be4197.hot-update.js",
+    "/0.c3c684aff86f4696d4e0.hot-update.js": "/0.c3c684aff86f4696d4e0.hot-update.js",
+    "/0.dd614f97302ae9559aa1.hot-update.js": "/0.dd614f97302ae9559aa1.hot-update.js",
+    "/0.b17a1697f112820c1e3b.hot-update.js": "/0.b17a1697f112820c1e3b.hot-update.js",
+    "/0.d4171fc85b8295acf7be.hot-update.js": "/0.d4171fc85b8295acf7be.hot-update.js",
+    "/0.80b2af9554e39db9540e.hot-update.js": "/0.80b2af9554e39db9540e.hot-update.js",
+    "/0.4d4272b122fba0cd2f5a.hot-update.js": "/0.4d4272b122fba0cd2f5a.hot-update.js",
+    "/0.414112b5976fd19e1af7.hot-update.js": "/0.414112b5976fd19e1af7.hot-update.js",
+    "/0.9cdba289d0110ad89aff.hot-update.js": "/0.9cdba289d0110ad89aff.hot-update.js",
+    "/0.abc66b72fefec45410ab.hot-update.js": "/0.abc66b72fefec45410ab.hot-update.js",
+    "/0.e21d516f32d3f35de8a8.hot-update.js": "/0.e21d516f32d3f35de8a8.hot-update.js",
+    "/0.13f75b7833aa778f516c.hot-update.js": "/0.13f75b7833aa778f516c.hot-update.js",
+    "/0.982e96d4136b23b48c7d.hot-update.js": "/0.982e96d4136b23b48c7d.hot-update.js"
 }
