--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
-    "laravel-mix": "0.*",
+    "laravel-mix": "^1.0.7",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^15.6.1",
