Adding upload table seeder

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/0.afd3bd4fe7ebfa8f06ae.hot-update.js": "/0.afd3bd4fe7ebfa8f06ae.hot-update.js",
+    "/0.420a6befde51ce4eec9a.hot-update.js": "/0.420a6befde51ce4eec9a.hot-update.js"
 }
