--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "vee-validate": "^2.0.0-rc.7"
   },
   "devDependencies": {
     "cross-env": "^3.2.3",
