--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -11,5 +11,7 @@
     "/0.2137df29746c9aa8708d.hot-update.js": "/0.2137df29746c9aa8708d.hot-update.js",
     "/0.751130885aa70d72931d.hot-update.js": "/0.751130885aa70d72931d.hot-update.js",
     "/0.e73befb6493846c1f856.hot-update.js": "/0.e73befb6493846c1f856.hot-update.js",
-    "/0.e55e415e90e95f0a4a31.hot-update.js": "/0.e55e415e90e95f0a4a31.hot-update.js"
+    "/0.e55e415e90e95f0a4a31.hot-update.js": "/0.e55e415e90e95f0a4a31.hot-update.js",
+    "/0.8bb1be09df9123fb27fc.hot-update.js": "/0.8bb1be09df9123fb27fc.hot-update.js",
+    "/0.c06b0448acf87f9691ae.hot-update.js": "/0.c06b0448acf87f9691ae.hot-update.js"
 }
