--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "loaders.css": "^0.1.2",
