--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/0.a34b6f0e06137694266c.hot-update.js": "/0.a34b6f0e06137694266c.hot-update.js",
+    "/0.74882a71ac878ca34f80.hot-update.js": "/0.74882a71ac878ca34f80.hot-update.js",
+    "/0.c5610ffc4ab09e9581ff.hot-update.js": "/0.c5610ffc4ab09e9581ff.hot-update.js",
+    "/0.061ab7e6f31cc7eee5f6.hot-update.js": "/0.061ab7e6f31cc7eee5f6.hot-update.js"
 }
