Fixing login view and routing

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/0.e75058886349916b2cbf.hot-update.js": "/0.e75058886349916b2cbf.hot-update.js",
+    "/0.75555aeb393b0c55e533.hot-update.js": "/0.75555aeb393b0c55e533.hot-update.js"
 }
